--- a/projetPourGithub.html
+++ b/projetPourGithub.html
@@ -7,12 +7,12 @@
 <body>
 <a href= https://www.bdeb.qc.ca/ title=blablabla> College bois de boulogne </a>
 </br>
-//<tr align=center>
-//	<th>Ajout du tableau vide</th>
+<tr align=center>
+	<th>Ajout du tableau vide</th>
 //	<td>Ajout d'une ligne au tableau </td>
 //	<td>Ajout du deuxieme ligne</td>
 //	<td>Ajout du troisieme ligne</td>
-//</tr>
+</tr>
 
 
 	
