ajout des lignes au tableau + modification fichier CSS (premier collaborateur)

--- a/projetPourGithub.html
+++ b/projetPourGithub.html
@@ -9,9 +9,9 @@
 </br>
 <tr align=center>
 	<th>Ajout du tableau vide</th>
-//	<td>Ajout d'une ligne au tableau </td>
-//	<td>Ajout du deuxieme ligne</td>
-//	<td>Ajout du troisieme ligne</td>
+	<td>Ajout d'une ligne au tableau </td>
+	<td>Ajout du deuxieme ligne</td>
+	<td>Ajout du troisieme ligne</td>
 </tr>
 
 
