ajout d'une image + adaptation html et CSS (premier collaborateur)

--- a/projetPourGithub.html
+++ b/projetPourGithub.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>manipulation Github</title>
-<link href="style.css" rel="stylesheet" media="all" type="text/css">
+<title> manipulation Github </title>
+<link align=center href="style.css" rel="stylesheet" media="all" type="text/css">
+</br>
+</br>
+</br>
 </head>
 <body>
-<a href= https://www.bdeb.qc.ca/ title=blablabla> College bois de boulogne </a>
+<a align=center href= https://www.bdeb.qc.ca/ title=blablabla> College bois de boulogne </a>
+</br>
+</br>
 </br>
 	<table align=center>
-		<tr><th>Ajout du tableau vide</th></tr>
+		<tr><th>Ajout d'un tableau vide</th></tr>
 		<tr><td>Ajout d'une ligne au tableau </td></tr>
-		<tr><td>Ajout du deuxieme ligne</td></tr>
-		<tr><td>Ajout du troisieme ligne</td></tr>
+		<tr><td>Ajout d'une deuxieme ligne</td></tr>
+		<tr><td>Ajout d'une troisieme ligne</td></tr>
 	</table>
+</br>
+</br>
+</br>
+<div><img src="C:\projet_github\mtlbdb.jpg" align="center"></div>
 
 
 	
